# second-innings

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
job_automation/: __init__.py  browser.py  cli.py  config.py  form_filler.py  linkedin_form.py  models.py  question_log.py  resume_context.py  scoring.py  screening.py  screening_fields.py  screening_learn.py  setup_wizard.py  site_login.py  tracker.py
job_automation/applier/: __init__.py  base.py  generic.py  hirist.py  indeed.py  linkedin.py  naukri.py  orchestrator.py
job_automation/content/: __init__.py  ai_client.py  cold_email.py  cover_letter.py  linkedin_dm.py
job_automation/db/: __init__.py  dedup.py  repository.py  schema.py
job_automation/scraper/: __init__.py  base.py  cutshort.py  generic.py  hirist.py  indeed.py  linkedin.py  naukri.py  orchestrator.py  wellfound.py
job_automation/ui/: __init__.py  server.py
job_automation/ui/static/: app.js  styles.css
job_automation/ui/templates/: index.html
scripts/: backfill_scores.py  launch_brave.sh  launch_chrome.sh
